# rigel_registry_plugin

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  ecr_rigel_plugin.py  mypy.ini  noxfile.py  pyproject.toml  setup.py
.github/workflows/: ci.yaml  pypi.yaml
ecr_rigel_plugin/: __init__.py  ecr_rigel_plugin.py  exceptions.py
registry_rigel_plugin/: __init__.py  exceptions.py  plugin.py
registry_rigel_plugin/registries/: ecr.py  generic.py
rigel_registry_plugin/: __init__.py  exceptions.py  plugin.py
rigel_registry_plugin/registries/: ecr.py  generic.py
tests/: test_exceptions.py  test_plugin.py  test_registries_ecr.py  test_registries_generic.py
