[tool.poetry]
name = "ecr_rigel_plugin"
version = "0.1.0"
description = "A plugin for Rigel to deploy Docker images to AWS ECR."
homepage = "https://gitlab.inesctec.pt/pedro.m.melo/ecr_rigel_plugin"
keywords = ["rigel", "aws", "ecr"]
authors = ["Pedro Miguel Melo <pedro.m.melo@inesctec.pt>"]
maintainers = ["Pedro Miguel Melo <pedro.m.melo@inesctec.pt>"]
readme = "README.md"
repository = "https://gitlab.inesctec.pt/pedro.m.melo/ecr_rigel_plugin"
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.20.52"
docker = "^5.0.3"
rigel = {git = "https://gitlab.inesctec.pt/pedro.m.melo/rigel.git"}

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
unittest = "^0.0"
flake8 = "^4.0.1"
coverage = {extras = ["toml"], version = "^6.3.1"}
mypy = "^0.931"
flake8-bugbear = "^22.1.11"
pre-commit = "^2.17.0"
nox = "^2022.1.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
fail_under = 90